<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudyApp</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_study_mate">StudyMate</string>
    <string name="title"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_nav_frag">Nav_frag</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_text1">NavigationText1</string>
    <string name="navigation_drawer_text2">NavigationText2</string>
    <string name="navigation_drawer_text3">NavigationText3</string>
    <string name="navigation_drawer_text4">NavigationText4</string>
    <string name="navigation_drawer_text5">NavigationText5</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_demo">demoActivity</string>

</resources>
